2009-06-26 [colin]	3.7.1cvs79

	* src/summaryview.c
		Sort by msgnum if dates are equal

2009-06-24 [paul]	3.7.1cvs78

	* src/summaryview.c
		make some (forgotten) strings translatable

2009-06-19 [colin]	3.7.1cvs77

	* src/summaryview.c
		Fix menu sensitiveness

2009-06-18 [colin]	3.7.1cvs76

	* configure.ac
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpcore/sgpgme.h
	* src/plugins/pgpmime/mypgpcore.def
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/smime/mypgpcore.def
	* src/plugins/smime/smime.c
		Use largefile support (and stop using our old GPGME
		hack on gpgme_data_seek/rewind)
		(See 1.9.12cvs44 to 46 - if this breaks things we 
		should soon know :)

2009-06-13 [colin]	3.7.1cvs75

	* src/gtk/spell_entry.c
		Fix assertion. We can put a NULL gtkaspell to
		an entry; it just means it won't be spell-checked.

2009-06-12 [mones]	3.7.1cvs74

	* src/compose.c
	* src/messageview.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/common/utils.c
	* src/common/utils.h
		Added preference to use account address in generated
		Message-Id. Fixes Debian bug #531052

2009-06-12 [colin]	3.7.1cvs73

	* src/common/ssl.c
		Better fix, API-compatible with libgnutls13

2009-06-12 [colin]	3.7.1cvs72

	* src/common/ssl.c
		Use compatibility mode in GnuTLS, and avoid problems with 
		servers that don't comply 100% with the spec, but still
		exist.

2009-06-06 [iwkse]	3.7.1cvs71

	* src/compose.c
		Ops..revert a mix with another patch

2009-06-06 [iwkse]	3.7.1cvs70

	* src/compose.c
		A better fix for the previous commit's issue

2009-06-06 [iwkse]	3.7.1cvs69

	* src/compose.c
		Fix shutting down of Claws Mail while a GTK_Return keypress 
		event is sent to the Attach property window

2009-06-05 [colin]	3.7.1cvs68

	* src/compose.c
		Fix build on GTK+ 2.6

2009-06-03 [mones]	3.7.1cvs67

	* tools/make.themes.project
		Oops! fix header, sorry Paul ;-)

2009-06-03 [mones]	3.7.1cvs66

	* tools/make.themes.project
		Add support for PNG themes and other